2004-03-09  Murray Cumming  <murrayc@murrayc.com>
 
 	* Some, but not all, SUN Forte build fixes:
 	* demos/gtk-demo/demowindow.cc: Added prototypes for flockfile()
 	and funlockfile() because it does not seem to get them from
	stdio.h - very strange. Commented-out the g_assert() lines that it
 	says as badly formed.
 	* demos/gtk-demo/textwidget.cc: Made the next_token char* const.
	* examples/book/clipboard/ideal/examplewindow.cc: 
 	on_clipboard_received_targets: Remove the useless const from the
 	std::list variable because it confused the compiler.
 	* examples/cellrenderercustom/cellrendererpopup.cc:
 	on_show_popup(): Use namespaced class name when specifying a
 	particular version of gobj().
 	* gdk/src/display.hg: Removed lots of extra ;s that caused
 	warnings.
 	* gdk/src/pixmap.ccg: Use unwrap<Drawable> instead of 
 	unwrap<const Drawable> - this is the same as the sun-specific
 	stuff in tools/m4/convert_*.m4.
 	* gdk/src/pixmap.hg: Removed extra ;s that cause warnings.
 	* gtk/src/textbuffer.ccg: insert_(): Some const changes - see the 
 	comments. 
 	* tools/m4/convert_gdk.m4, convert_glib.m4: Use existing
 	sun-specific conversion when converting from any 
 	RefPtr<const Something> to *Something.

2004-03-09  Murray Cumming  <murrayc@murrayc.com>

	* Regenerated gtk/src/gtk_docs.xml, and gdk/src/gdk_docs.xml with
	docextract_to_xml.py.
	* docs/reference/Makefile.am: Upload doxygen-warnings.txt and 
	doxygen-output.txt every time, so everybody sees them.

2004-03-09  Hagen Moebius  <hagen.moebius@starschiffchen.de>

        * Recent efforts cumulated in a massive documentation patch, which
        eliminates almost all doxygen warnings/errors.
        Files: atk/atkmm/init.h, gdk/src/display.hg, drawable.hg,
        gdk_docs_override.xml, pixbuf.hg, window.ccg, window.hg,
        gtk/gtkmm/accelkey.h, gtk/src/accellabel.hg, alignment.hg, box.hg
        button.hg, cellrenderer.hg, filechooser.hg, gtk_docs_override.xml,