@@ -1,3 +1,9 @@
+2004-03-11  Murray Cumming  <murrayc@murrayc.com>
+
+	* demos/gtk-demo/demowindow.cc: Added #ifdef GLIBMM_COMPILER_SUN_FORTE
+	around the strange flockfile and funlockfile function prototypes, to 
+	avoid problems on platforms which declare them differently.
+
 2004-03-09  Murray Cumming  <murrayc@murrayc.com>
  
  	* Some, but not all, SUN Forte build fixes:
